--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint-plugin-prettier": "5.0.0",
     "nodemon": "3.0.1",
     "prettier": "3.0.0"
+  },
+  "dependencies": {
+    "express": "4.18.2"
   }
 }
