--- a/env.template
+++ b/env.template
@@ -5,3 +5,10 @@ DB_NAME=
 DB_USER=
 DB_PASSWORD=
 DB_PORT=
+
+# ---> MySQL Config
+MYSQL_DB_SERVER=
+MYSQL_DB_NAME=
+MYSQL_DB_USER=
+MYSQL_DB_PASSWORD=
+MYSQL_DB_PORT=
