Updated env.template file

--- a/env.template
+++ b/env.template
@@ -16,3 +16,9 @@ MYSQL_DB_PORT=
 # API Settings
 API_KEY=
 JWT_SECRET=
+
+# SMTP Config
+SMTP_HOST=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_USER_CREDENTIAL=
+SMTP_PASSWORD_CREDENTIAL=
